--- a/package.json
+++ b/package.json
@@ -5,16 +5,21 @@
   "dependencies": {
     "aws-amplify": "^2.2.0",
     "aws-amplify-react": "^3.1.1",
+    "axios": "^0.21.1",
     "bootstrap": "^4.4.1",
+    "bootstrap-social": "^5.1.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
     "kind-of": "^6.0.3",
     "lodash": "^4.17.19",
+    "node-forge": "^0.10.0",
+    "object-path": "^0.11.5",
+    "popper": "^1.0.1",
+    "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1",
-    "axios": "^0.21.1",
-    "serialize-javascript": "^3.1.0",
-    "node-forge": "^0.10.0",
-    "object-path": "^0.11.5"
+    "serialize-javascript": "^3.1.0"
   },
   "resolutions": {
     "set-value": "^2.0.1",
